8231550: C2: ShouldNotReachHere() in verify_strip_mined_scheduling

Reviewed-by: vlivanov, thartmann